# dart

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  environment.yml
.github/workflows/: ci.yml  release.yml
.scripts/: benchmark_frame_correct.py
cmake/: version.h.in
conda_recipe/: meta.yaml
docs/: DAMAGE_NN_DESIGN.md  HEXAMER_TRAINING.md  META_MODE.md  POSITIONAL_HEXAMERS.md  STRAND_SELECTION_FIX_PLAN.md  agp_overview.excalidraw  architecture_diagram.dot  architecture_diagram.excalidraw  architecture_diagram.mmd  channel_decision_diagram.dot  channel_decision_diagram.excalidraw  channel_decision_diagram.mmd  emi_damage_reassignment_plan.md  information_flow_diagram.dot  information_flow_diagram.excalidraw  information_flow_diagram.mmd  long_read_frame_error_analysis.md
docs/figures/: agp_paperbanana_input.txt
docs/figures/run_20260214_183111_a3a312/: planning.json
docs/figures/run_20260214_183224_76ba40/: planning.json
docs/figures/run_20260214_185747_28be1c/: planning.json
examples/: test.fasta  test.fastq
examples/tutorial/: run_tutorial.sh
examples/tutorial/data/: benchmark_summary.tsv
include/agp/: adaptive_damage.hpp  bayesian_damage_score.hpp  bdamage_reader.hpp  codon_tables.hpp  columnar_index.hpp  coverage_em.hpp  damage_aa_table.hpp  damage_alignment_evidence.hpp  damage_cluster.hpp  damage_cluster_pipeline.hpp  damage_cluster_seeds.hpp  damage_context_tables.hpp  damage_hexamer.hpp  damage_index.hpp  damage_index_reader.hpp  damage_index_writer.hpp  damage_likelihood.hpp  damage_llr.hpp  damage_model.hpp  damage_stats.hpp  decoy_generator.hpp  dicodon_phase.hpp  em_index.hpp  em_reassign.hpp  fast_columnar_writer.hpp  fast_tsv.hpp  fdr_estimator.hpp  forbidden_patterns.hpp  frame_nn.hpp  frame_selector.hpp  fungi_damage_likelihood.hpp  fungi_dicodon_phase.hpp  fungi_hexamer_table.hpp  fungi_positional_hexamer.hpp  fungi_strand_hexamer.hpp  gtdb_codon_bigram.hpp  gtdb_damage_likelihood.hpp  gtdb_dicodon_phase.hpp  gtdb_dipeptide.hpp  gtdb_hexamer_table.hpp  (+54 more)
include/dart/: adaptive_damage.hpp  bayesian_damage_score.hpp  columnar_index.hpp  coverage_em.hpp  damage_aa_table.hpp  damage_alignment_evidence.hpp  damage_cluster.hpp  damage_cluster_pipeline.hpp  damage_cluster_seeds.hpp  damage_context_tables.hpp  damage_hexamer.hpp  damage_index.hpp  damage_index_reader.hpp  damage_index_writer.hpp  damage_likelihood.hpp  damage_llr.hpp  damage_model.hpp  damage_stats.hpp  decoy_generator.hpp  dicodon_phase.hpp  em_index.hpp  em_reassign.hpp  fast_columnar_writer.hpp  fast_tsv.hpp  fdr_estimator.hpp  forbidden_patterns.hpp  frame_nn.hpp  frame_selector.hpp  fungi_damage_likelihood.hpp  fungi_dicodon_phase.hpp  fungi_hexamer_manifest.json  fungi_hexamer_table.hpp  fungi_positional_hexamer.hpp  fungi_strand_hexamer.hpp  gtdb_codon_bigram.hpp  gtdb_damage_likelihood.hpp  gtdb_dicodon_phase.hpp  gtdb_dipeptide.hpp  gtdb_hexamer_manifest.json  gtdb_hexamer_table.hpp  (+58 more)
notebooks/: benchmark_summary.ipynb
scripts/: agp_train_hexamers.cpp  benchmark_hamming.cpp  build_calibration_table.py  calibrate_from_protein_hits.py  create_damage_lookup.py  download_refseq.sh  download_refseq_cds.sh  extract_aa6_ultra.cpp  extract_boundary_hexamers.cpp  extract_codon_bigrams.cpp  extract_damage_context.cpp  extract_dicodon_phase_hexamers.cpp  extract_gtdb_hexamers_parallel.cpp  extract_intergenic_hexamers.cpp  extract_metamers.cpp  extract_metamers_fast.cpp  extract_metamers_v2.cpp  extract_positional_hexamers.cpp  extract_refseq_hexamers.cpp  extract_strand_hexamers.cpp  extract_strand_hexamers_v2.cpp  extract_tripeptides.cpp  run_benchmarks.sh  run_validations.sh  train_damage_nn.py  train_frame_classifier.py  train_frame_nn.py  train_frame_selector.py  train_strand_classifier.py
src/: aa_syncmer.hpp  adaptive_damage.cpp  bdamage_reader.cpp  codon_tables.cpp  columnar_index.cpp  consensus_correction.hpp  consensus_damage.hpp  coverage_em.cpp  damage_aware_kmer.hpp  damage_cluster.cpp  damage_detection.cpp  damage_index_reader.cpp  damage_index_writer.cpp  damage_model.cpp  damage_probability.cpp  damage_scoring.cpp  em_index.cpp  em_reassign.cpp  frame_selector.cpp  main.cpp  reference_stats.cpp  sample_profile.cpp  scoring.cpp  sequence_io.cpp  sequence_io_backend.cpp  terminal_overlap.hpp  types.cpp  validate.cpp  validate_sequences.cpp  vtml_damage_scorer.hpp
src/cli/: analyze_errors.cpp  args.cpp  args.hpp  benchmark_damage.cpp  cmd_damage_annotate.cpp  cmd_damage_info.cpp  cmd_damage_profile.cpp  cmd_em_prepare.cpp  cmd_em_solve.cpp  cmd_em_solve2.cpp  cmd_hits2emi.cpp  cmd_sample_damage.cpp  dispatcher.cpp  subcommand.cpp  subcommand.hpp
src/damage/: analyzer.cpp  probability.cpp  profile.cpp
tests/: test_bayesian_frame.cpp  test_benchmark_fixture.cpp  test_cli_args.cpp  test_damage_annotate_regressions.cpp  test_formal_model.cpp  test_streaming_em.cpp
